--- a/app/src/main/res/layout/fragment_contact.xml
+++ b/app/src/main/res/layout/fragment_contact.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="About {NAME}"
+        android:id="@+id/about_name_title"
         android:textSize="30dp"
         android:textAlignment="center"
         />
